syntax = "proto3";
import "SharedMessages.proto";

option java_multiple_files = true;
option java_package = "via.sep3.group11.tier3.protobuf";

service Host{
  rpc CreateHost(GHost) returns (GHost);
  rpc GetHostByEmail(GEmail) returns (GHost);
  rpc getHostByHousingId(GId) returns (GHost);
  rpc deleteAccount (GEmail) returns (GEmpty);
  rpc updateInformation(GHostDetails) returns (GHost);
}

