syntax = "proto3";
import "SharedMessages.proto";

option java_multiple_files = true;
option java_package = "via.sep3.group11.tier2.protobuf";


service Refugee {
  rpc createRefugee(GRefugee) returns(GRefugee);
  rpc getRefugeeByEmail(GEmail) returns(GRefugee);
}